# anti-turing

./: .gitignore  README.md  agents.py  game.py  main.py  pyproject.toml  requirements.txt  topics.py  ui.py
.github/workflows/: publish.yml
anti_turing/: __init__.py  agents.py  config.py  game.py  main.py  ui.py
